swagger_trans_stats
